--- a/home.css
+++ b/home.css
@@ -13,5 +13,5 @@ body{
 #Headorname{
     text-align: center;
     font-size: 20px;
-    margin: 10px 40% 10px 40% ;
+    margin: 10px 45% 10px ;
 }
